  [the bug dates back to the initial implementation]

  cp, install, ln, and mv now use a numbered instead of a simple
  backup if copying a backup file to what might be its original.
  E.g., 'rm -f a a~; : > a; echo data > a~; cp --backup=simple a~ ./a'
  now makes a numbered backup file instead of losing the data.
  [the bug dates back to the initial implementation]

  date and touch no longer overwrite the heap with large
  user specified TZ values (CVE-2017-7476).
  [bug introduced in coreutils-8.27]

  dd status=progress now just counts seconds; e.g., it outputs "6 s"
  consistently rather than sometimes outputting "6.00001 s".
  [bug introduced in coreutils-8.24]

  df no longer interacts with excluded file system types, so for example
  specifying -x nfs no longer hangs with problematic nfs mounts.
  [bug introduced in coreutils-8.21]

  `groups inva:lid root` no longer exits immediately upon failure.
  Now, it prints a diagnostic or a line to stdout for each argument.
  [bug introduced in the bourne-shell-to-C rewrite for coreutils-6.11]

  split no longer exits when invocations of a --filter return EPIPE.
  [bug introduced in coreutils-8.26]

  md5sum --check no longer incorrectly enables BSD reversed format mode when
  ignoring some non checksum lines.  This also affects sha*sum and b2sum.
  [bug introduced in coreutils-8.14]

  tail -F 'dir/file' is now monitored even when 'dir' is replaced.
  [bug introduced with inotify support added in coreutils-7.5]

  tail -f with --pid=PID now processes all inotify events.
  Previously events may have been ignored completely upon PID death,
  or ignored until future events on the monitored files.
  [bug introduced with inotify support added in coreutils-7.5]

  tail -f /dev/tty is now supported by not using inotify when any
  non regular files are specified, as inotify is ineffective with these.
  [bug introduced with inotify support added in coreutils-7.5]
