@@ -21,6 +21,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   now makes a numbered backup file instead of losing the data.
   [the bug dates back to the initial implementation]
 
+  cp, install, ln, and mv now ignore nonsensical backup suffixes.
+  For example, --suffix='/' and --suffix='' are now no-ops.
+  [the bug dates back to the initial implementation]
+
   date and touch no longer overwrite the heap with large
   user specified TZ values (CVE-2017-7476).
   [bug introduced in coreutils-8.27]
